// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  data-css-w0yocm=""
  onKeyDown={[Function]}
>
  <div
    data-css-ctre2o=""
  >
    <div
      data-css-1gfowhv=""
    >
      <input
        aria-label="month"
        data-css-1ynlp2p=""
        name="mm"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="mm"
        style={
          Object {
            "width": "32px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="day"
        data-css-1ynlp2p=""
        name="dd"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="dd"
        style={
          Object {
            "width": "24px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="year"
        data-css-1ynlp2p=""
        name="yyyy"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="yyyy"
        style={
          Object {
            "width": "48px",
          }
        }
        value=""
      />
      <input
        data-css-gyrv08=""
        readOnly={true}
        tabIndex={-1}
        value=""
      />
      <button
        data-css-3txxwd=""
        onClick={[Function]}
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="calendar icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance default w/ error 1`] = `
<div
  data-css-w0yocm=""
  onKeyDown={[Function]}
>
  <div
    data-css-dysqqm=""
  >
    Problem field
  </div>
  <div
    data-css-in6gqi=""
  >
    <div
      data-css-1gfowhv=""
    >
      <input
        aria-label="month"
        data-css-1ynlp2p=""
        name="mm"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="mm"
        style={
          Object {
            "width": "32px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="day"
        data-css-1ynlp2p=""
        name="dd"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="dd"
        style={
          Object {
            "width": "24px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="year"
        data-css-1ynlp2p=""
        name="yyyy"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="yyyy"
        style={
          Object {
            "width": "48px",
          }
        }
        value=""
      />
      <input
        data-css-gyrv08=""
        readOnly={true}
        tabIndex={-1}
        value=""
      />
      <button
        data-css-3txxwd=""
        onClick={[Function]}
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="calendar icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
            />
          </svg>
        </div>
      </button>
      <div
        data-css-1ha66tv=""
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance subtle 1`] = `
<div
  data-css-w0yocm=""
  onKeyDown={[Function]}
>
  <div
    data-css-ctre2o=""
  >
    <div
      data-css-1usw9cb=""
    >
      <input
        aria-label="month"
        data-css-18at7l7=""
        name="mm"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="mm"
        style={
          Object {
            "width": "32px",
          }
        }
        value=""
      />
      <span
        data-css-2cik8p=""
      >
        /
      </span>
      <input
        aria-label="day"
        data-css-18at7l7=""
        name="dd"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="dd"
        style={
          Object {
            "width": "24px",
          }
        }
        value=""
      />
      <span
        data-css-2cik8p=""
      >
        /
      </span>
      <input
        aria-label="year"
        data-css-18at7l7=""
        name="yyyy"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="yyyy"
        style={
          Object {
            "width": "48px",
          }
        }
        value=""
      />
      <input
        data-css-gyrv08=""
        readOnly={true}
        tabIndex={-1}
        value=""
      />
      <button
        data-css-1uq4y8i=""
        onClick={[Function]}
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="calendar icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance subtle w/ error 1`] = `
<div
  data-css-w0yocm=""
  onKeyDown={[Function]}
>
  <div
    data-css-dysqqm=""
  >
    Problem field
  </div>
  <div
    data-css-in6gqi=""
  >
    <div
      data-css-1usw9cb=""
    >
      <input
        aria-label="month"
        data-css-18at7l7=""
        name="mm"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="mm"
        style={
          Object {
            "width": "32px",
          }
        }
        value=""
      />
      <span
        data-css-2cik8p=""
      >
        /
      </span>
      <input
        aria-label="day"
        data-css-18at7l7=""
        name="dd"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="dd"
        style={
          Object {
            "width": "24px",
          }
        }
        value=""
      />
      <span
        data-css-2cik8p=""
      >
        /
      </span>
      <input
        aria-label="year"
        data-css-18at7l7=""
        name="yyyy"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="yyyy"
        style={
          Object {
            "width": "48px",
          }
        }
        value=""
      />
      <input
        data-css-gyrv08=""
        readOnly={true}
        tabIndex={-1}
        value=""
      />
      <button
        data-css-1uq4y8i=""
        onClick={[Function]}
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="calendar icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
            />
          </svg>
        </div>
      </button>
      <div
        data-css-1ha66tv=""
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled compare 1`] = `
<div>
  <div
    data-css-w0yocm=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Normal
    </div>
    <div
      data-css-ctre2o=""
    >
      <div
        data-css-1gfowhv=""
      >
        <input
          aria-label="month"
          data-css-1ynlp2p=""
          name="mm"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="mm"
          style={
            Object {
              "width": "32px",
            }
          }
          value=""
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="day"
          data-css-1ynlp2p=""
          name="dd"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="dd"
          style={
            Object {
              "width": "24px",
            }
          }
          value=""
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="year"
          data-css-1ynlp2p=""
          name="yyyy"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="yyyy"
          style={
            Object {
              "width": "48px",
            }
          }
          value=""
        />
        <input
          data-css-gyrv08=""
          readOnly={true}
          tabIndex={-1}
          value=""
        />
        <button
          data-css-3txxwd=""
          onClick={[Function]}
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="calendar icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-6ga4kh=""
    >
      Still normal
    </div>
  </div>
  <div
    data-css-1y0hkm3=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      I'm not usable
    </div>
    <div
      data-css-ctre2o=""
    >
      <div
        data-css-1gfowhv=""
      >
        <input
          aria-label="month"
          data-css-1ynlp2p=""
          disabled={true}
          name="mm"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="mm"
          style={
            Object {
              "width": "32px",
            }
          }
          value={12}
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="day"
          data-css-1ynlp2p=""
          disabled={true}
          name="dd"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="dd"
          style={
            Object {
              "width": "24px",
            }
          }
          value={7}
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="year"
          data-css-1ynlp2p=""
          disabled={true}
          name="yyyy"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="yyyy"
          style={
            Object {
              "width": "48px",
            }
          }
          value={1941}
        />
        <input
          data-css-gyrv08=""
          disabled={true}
          readOnly={true}
          tabIndex={-1}
          value="1941-12-7"
        />
        <button
          data-css-3txxwd=""
          disabled={true}
          onClick={[Function]}
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="calendar icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-6ga4kh=""
    >
      Neither am I
    </div>
  </div>
</div>
`;

exports[`Storyshots labels compare w/ textinput 1`] = `
<div>
  <div
    style={
      Object {
        "marginBottom": "12px",
      }
    }
  >
    <div
      data-css-w0yocm=""
      onKeyDown={[Function]}
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-1gfowhv=""
        >
          <input
            aria-label="month"
            data-css-1ynlp2p=""
            name="mm"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="mm"
            style={
              Object {
                "width": "32px",
              }
            }
            value=""
          />
          <span
            data-css-9eecwn=""
          >
            /
          </span>
          <input
            aria-label="day"
            data-css-1ynlp2p=""
            name="dd"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="dd"
            style={
              Object {
                "width": "24px",
              }
            }
            value=""
          />
          <span
            data-css-9eecwn=""
          >
            /
          </span>
          <input
            aria-label="year"
            data-css-1ynlp2p=""
            name="yyyy"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="yyyy"
            style={
              Object {
                "width": "48px",
              }
            }
            value=""
          />
          <input
            data-css-gyrv08=""
            readOnly={true}
            tabIndex={-1}
            value=""
          />
          <button
            data-css-3txxwd=""
            onClick={[Function]}
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="calendar icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-ctre2o=""
        >
          <div
            data-css-ydex85=""
          >
            <input
              data-css-zjzpem=""
              disabled={false}
              type="date"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels label 1`] = `
<div
  data-css-w0yocm=""
  onKeyDown={[Function]}
>
  <div
    data-css-dysqqm=""
  >
    Some label
  </div>
  <div
    data-css-ctre2o=""
  >
    <div
      data-css-1gfowhv=""
    >
      <input
        aria-label="month"
        data-css-1ynlp2p=""
        name="mm"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="mm"
        style={
          Object {
            "width": "32px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="day"
        data-css-1ynlp2p=""
        name="dd"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="dd"
        style={
          Object {
            "width": "24px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="year"
        data-css-1ynlp2p=""
        name="yyyy"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="yyyy"
        style={
          Object {
            "width": "48px",
          }
        }
        value=""
      />
      <input
        data-css-gyrv08=""
        readOnly={true}
        tabIndex={-1}
        value=""
      />
      <button
        data-css-3txxwd=""
        onClick={[Function]}
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="calendar icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots labels label and subLabel 1`] = `
<div
  data-css-w0yocm=""
  onKeyDown={[Function]}
>
  <div
    data-css-dysqqm=""
  >
    Some label
  </div>
  <div
    data-css-ctre2o=""
  >
    <div
      data-css-1gfowhv=""
    >
      <input
        aria-label="month"
        data-css-1ynlp2p=""
        name="mm"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="mm"
        style={
          Object {
            "width": "32px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="day"
        data-css-1ynlp2p=""
        name="dd"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="dd"
        style={
          Object {
            "width": "24px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="year"
        data-css-1ynlp2p=""
        name="yyyy"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="yyyy"
        style={
          Object {
            "width": "48px",
          }
        }
        value=""
      />
      <input
        data-css-gyrv08=""
        readOnly={true}
        tabIndex={-1}
        value=""
      />
      <button
        data-css-3txxwd=""
        onClick={[Function]}
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="calendar icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-6ga4kh=""
  >
    Some sublabel
  </div>
</div>
`;

exports[`Storyshots labels none 1`] = `
<div
  data-css-w0yocm=""
  onKeyDown={[Function]}
>
  <div
    data-css-ctre2o=""
  >
    <div
      data-css-1gfowhv=""
    >
      <input
        aria-label="month"
        data-css-1ynlp2p=""
        name="mm"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="mm"
        style={
          Object {
            "width": "32px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="day"
        data-css-1ynlp2p=""
        name="dd"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="dd"
        style={
          Object {
            "width": "24px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="year"
        data-css-1ynlp2p=""
        name="yyyy"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="yyyy"
        style={
          Object {
            "width": "48px",
          }
        }
        value=""
      />
      <input
        data-css-gyrv08=""
        readOnly={true}
        tabIndex={-1}
        value=""
      />
      <button
        data-css-3txxwd=""
        onClick={[Function]}
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="calendar icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots labels subLabel 1`] = `
<div
  data-css-w0yocm=""
  onKeyDown={[Function]}
>
  <div
    data-css-ctre2o=""
  >
    <div
      data-css-1gfowhv=""
    >
      <input
        aria-label="month"
        data-css-1ynlp2p=""
        name="mm"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="mm"
        style={
          Object {
            "width": "32px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="day"
        data-css-1ynlp2p=""
        name="dd"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="dd"
        style={
          Object {
            "width": "24px",
          }
        }
        value=""
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="year"
        data-css-1ynlp2p=""
        name="yyyy"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="yyyy"
        style={
          Object {
            "width": "48px",
          }
        }
        value=""
      />
      <input
        data-css-gyrv08=""
        readOnly={true}
        tabIndex={-1}
        value=""
      />
      <button
        data-css-3txxwd=""
        onClick={[Function]}
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="calendar icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-6ga4kh=""
  >
    Some sublabel
  </div>
</div>
`;

exports[`Storyshots layouts full width 1`] = `
<div
  style={
    Object {
      "border": "1px solid blue",
      "width": "500px",
    }
  }
>
  <div
    data-css-w0yocm=""
    onKeyDown={[Function]}
    style={
      Object {
        "display": "block",
        "width": "100%",
      }
    }
  >
    <div
      data-css-dysqqm=""
    >
      First
    </div>
    <div
      data-css-ctre2o=""
    >
      <div
        data-css-1gfowhv=""
      >
        <input
          aria-label="month"
          data-css-1ynlp2p=""
          name="mm"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="mm"
          style={
            Object {
              "width": "32px",
            }
          }
          value=""
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="day"
          data-css-1ynlp2p=""
          name="dd"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="dd"
          style={
            Object {
              "width": "24px",
            }
          }
          value=""
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="year"
          data-css-1ynlp2p=""
          name="yyyy"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="yyyy"
          style={
            Object {
              "width": "48px",
            }
          }
          value=""
        />
        <input
          data-css-gyrv08=""
          readOnly={true}
          tabIndex={-1}
          value=""
        />
        <button
          data-css-3txxwd=""
          onClick={[Function]}
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="calendar icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    data-css-w0yocm=""
    onKeyDown={[Function]}
    style={
      Object {
        "display": "block",
        "width": "100%",
      }
    }
  >
    <div
      data-css-dysqqm=""
    >
      Second
    </div>
    <div
      data-css-in6gqi=""
    >
      <div
        data-css-1gfowhv=""
      >
        <input
          aria-label="month"
          data-css-1ynlp2p=""
          name="mm"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="mm"
          style={
            Object {
              "width": "32px",
            }
          }
          value=""
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="day"
          data-css-1ynlp2p=""
          name="dd"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="dd"
          style={
            Object {
              "width": "24px",
            }
          }
          value=""
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="year"
          data-css-1ynlp2p=""
          name="yyyy"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="yyyy"
          style={
            Object {
              "width": "48px",
            }
          }
          value=""
        />
        <input
          data-css-gyrv08=""
          readOnly={true}
          tabIndex={-1}
          value=""
        />
        <button
          data-css-3txxwd=""
          onClick={[Function]}
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="calendar icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
              />
            </svg>
          </div>
        </button>
        <div
          data-css-1ha66tv=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-w0yocm=""
    onKeyDown={[Function]}
    style={
      Object {
        "display": "block",
        "width": "100%",
      }
    }
  >
    <div
      data-css-dysqqm=""
    >
      Third
    </div>
    <div
      data-css-ctre2o=""
    >
      <div
        data-css-1usw9cb=""
      >
        <input
          aria-label="month"
          data-css-18at7l7=""
          name="mm"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="mm"
          style={
            Object {
              "width": "32px",
            }
          }
          value=""
        />
        <span
          data-css-2cik8p=""
        >
          /
        </span>
        <input
          aria-label="day"
          data-css-18at7l7=""
          name="dd"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="dd"
          style={
            Object {
              "width": "24px",
            }
          }
          value=""
        />
        <span
          data-css-2cik8p=""
        >
          /
        </span>
        <input
          aria-label="year"
          data-css-18at7l7=""
          name="yyyy"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="yyyy"
          style={
            Object {
              "width": "48px",
            }
          }
          value=""
        />
        <input
          data-css-gyrv08=""
          readOnly={true}
          tabIndex={-1}
          value=""
        />
        <button
          data-css-1uq4y8i=""
          onClick={[Function]}
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="calendar icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    data-css-w0yocm=""
    onKeyDown={[Function]}
    style={
      Object {
        "display": "block",
        "width": "100%",
      }
    }
  >
    <div
      data-css-dysqqm=""
    >
      Fourth
    </div>
    <div
      data-css-in6gqi=""
    >
      <div
        data-css-1usw9cb=""
      >
        <input
          aria-label="month"
          data-css-18at7l7=""
          name="mm"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="mm"
          style={
            Object {
              "width": "32px",
            }
          }
          value=""
        />
        <span
          data-css-2cik8p=""
        >
          /
        </span>
        <input
          aria-label="day"
          data-css-18at7l7=""
          name="dd"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="dd"
          style={
            Object {
              "width": "24px",
            }
          }
          value=""
        />
        <span
          data-css-2cik8p=""
        >
          /
        </span>
        <input
          aria-label="year"
          data-css-18at7l7=""
          name="yyyy"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="yyyy"
          style={
            Object {
              "width": "48px",
            }
          }
          value=""
        />
        <input
          data-css-gyrv08=""
          readOnly={true}
          tabIndex={-1}
          value=""
        />
        <button
          data-css-1uq4y8i=""
          onClick={[Function]}
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="calendar icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
              />
            </svg>
          </div>
        </button>
        <div
          data-css-1ha66tv=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots layouts right-aligned 1`] = `
<div
  style={
    Object {
      "border": "1px solid blue",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <div
      data-css-w0yocm=""
      onKeyDown={[Function]}
    >
      <div
        data-css-ctre2o=""
      >
        <div
          data-css-1usw9cb=""
        >
          <input
            aria-label="month"
            data-css-18at7l7=""
            name="mm"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="mm"
            style={
              Object {
                "width": "32px",
              }
            }
            value=""
          />
          <span
            data-css-2cik8p=""
          >
            /
          </span>
          <input
            aria-label="day"
            data-css-18at7l7=""
            name="dd"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="dd"
            style={
              Object {
                "width": "24px",
              }
            }
            value=""
          />
          <span
            data-css-2cik8p=""
          >
            /
          </span>
          <input
            aria-label="year"
            data-css-18at7l7=""
            name="yyyy"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="yyyy"
            style={
              Object {
                "width": "48px",
              }
            }
            value=""
          />
          <input
            data-css-gyrv08=""
            readOnly={true}
            tabIndex={-1}
            value=""
          />
          <button
            data-css-1uq4y8i=""
            onClick={[Function]}
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="calendar icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "border": "3px solid green",
        "height": "50px",
      }
    }
  />
</div>
`;

exports[`Storyshots value controlled value changes 1`] = `
<div>
  <div
    style={
      Object {
        "color": "rgba(255, 255, 255, 0.95)",
      }
    }
  >
    Sending in: 
    1941-12-7
  </div>
  <div
    data-css-w0yocm=""
    onKeyDown={[Function]}
  >
    <div
      data-css-ctre2o=""
    >
      <div
        data-css-1gfowhv=""
      >
        <input
          aria-label="month"
          data-css-1ynlp2p=""
          name="mm"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="mm"
          style={
            Object {
              "width": "32px",
            }
          }
          value={12}
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="day"
          data-css-1ynlp2p=""
          name="dd"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="dd"
          style={
            Object {
              "width": "24px",
            }
          }
          value={7}
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="year"
          data-css-1ynlp2p=""
          name="yyyy"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="yyyy"
          style={
            Object {
              "width": "48px",
            }
          }
          value={1941}
        />
        <input
          data-css-gyrv08=""
          readOnly={true}
          tabIndex={-1}
          value="1941-12-7"
        />
        <button
          data-css-3txxwd=""
          onClick={[Function]}
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="calendar icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots value date 1`] = `
<div
  data-css-w0yocm=""
  onKeyDown={[Function]}
>
  <div
    data-css-ctre2o=""
  >
    <div
      data-css-1gfowhv=""
    >
      <input
        aria-label="month"
        data-css-1ynlp2p=""
        name="mm"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="mm"
        style={
          Object {
            "width": "32px",
          }
        }
        value={12}
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="day"
        data-css-1ynlp2p=""
        name="dd"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="dd"
        style={
          Object {
            "width": "24px",
          }
        }
        value={7}
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="year"
        data-css-1ynlp2p=""
        name="yyyy"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="yyyy"
        style={
          Object {
            "width": "48px",
          }
        }
        value={1941}
      />
      <input
        data-css-gyrv08=""
        readOnly={true}
        tabIndex={-1}
        value="1941-12-7"
      />
      <button
        data-css-3txxwd=""
        onClick={[Function]}
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="calendar icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots value updated value, no initial 1`] = `
<div>
  <div
    style={
      Object {
        "color": "rgba(255, 255, 255, 0.95)",
      }
    }
  >
    Selected: 
    &lt;none&gt;
  </div>
  <div
    data-css-w0yocm=""
    onKeyDown={[Function]}
  >
    <div
      data-css-ctre2o=""
    >
      <div
        data-css-1gfowhv=""
      >
        <input
          aria-label="month"
          data-css-1ynlp2p=""
          name="mm"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="mm"
          style={
            Object {
              "width": "32px",
            }
          }
          value=""
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="day"
          data-css-1ynlp2p=""
          name="dd"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="dd"
          style={
            Object {
              "width": "24px",
            }
          }
          value=""
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="year"
          data-css-1ynlp2p=""
          name="yyyy"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="yyyy"
          style={
            Object {
              "width": "48px",
            }
          }
          value=""
        />
        <input
          data-css-gyrv08=""
          readOnly={true}
          tabIndex={-1}
          value=""
        />
        <button
          data-css-3txxwd=""
          onClick={[Function]}
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="calendar icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots value updated value, w/ initial 1`] = `
<div>
  <div
    style={
      Object {
        "color": "rgba(255, 255, 255, 0.95)",
      }
    }
  >
    Selected: 
    1995-3-15
  </div>
  <div
    data-css-w0yocm=""
    onKeyDown={[Function]}
  >
    <div
      data-css-ctre2o=""
    >
      <div
        data-css-1gfowhv=""
      >
        <input
          aria-label="month"
          data-css-1ynlp2p=""
          name="mm"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="mm"
          style={
            Object {
              "width": "32px",
            }
          }
          value={3}
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="day"
          data-css-1ynlp2p=""
          name="dd"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="dd"
          style={
            Object {
              "width": "24px",
            }
          }
          value={15}
        />
        <span
          data-css-9eecwn=""
        >
          /
        </span>
        <input
          aria-label="year"
          data-css-1ynlp2p=""
          name="yyyy"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="yyyy"
          style={
            Object {
              "width": "48px",
            }
          }
          value={1995}
        />
        <input
          data-css-gyrv08=""
          readOnly={true}
          tabIndex={-1}
          value="1995-3-15"
        />
        <button
          data-css-3txxwd=""
          onClick={[Function]}
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="calendar icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots whitelist name 1`] = `
<div
  data-css-w0yocm=""
  onKeyDown={[Function]}
>
  <div
    data-css-ctre2o=""
  >
    <div
      data-css-1gfowhv=""
    >
      <input
        aria-label="month"
        data-css-1ynlp2p=""
        name="mm"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="mm"
        style={
          Object {
            "width": "32px",
          }
        }
        value={4}
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="day"
        data-css-1ynlp2p=""
        name="dd"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="dd"
        style={
          Object {
            "width": "24px",
          }
        }
        value={2}
      />
      <span
        data-css-9eecwn=""
      >
        /
      </span>
      <input
        aria-label="year"
        data-css-1ynlp2p=""
        name="yyyy"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="yyyy"
        style={
          Object {
            "width": "48px",
          }
        }
        value={1944}
      />
      <input
        data-css-gyrv08=""
        name="dateForForm"
        readOnly={true}
        tabIndex={-1}
        value="1944-4-2"
      />
      <button
        data-css-3txxwd=""
        onClick={[Function]}
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="calendar icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
